Fix navbar overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -20,7 +20,7 @@
     }
 
     .navbar-container {
-        height: 60px;
+        @apply h-full;
     }
 
     #navbar-toggle:checked + #navbar-container {
